--- a/yt-dlp/config/crewai-system.conf
+++ b/yt-dlp/config/crewai-system.conf
@@ -1,6 +1,10 @@
-# F:/yt-auto/crewaiv2/yt-dlp/config/crewai-system.conf
-# Output to F:/yt-auto/crewaiv2/CrewAI_Content_System/Downloads/YouTube with organized structure
--o F:/yt-auto/crewaiv2/CrewAI_Content_System/Downloads/YouTube/%(uploader)s/%(upload_date>%Y)s/%(title)s [%(id)s].%(ext)s
+# CrewAI yt-dlp configuration
+# Paths are provided via environment variables:
+#   CREWAI_DOWNLOADS_DIR - base downloads directory
+#   CREWAI_YTDLP_ARCHIVE - path to archive file
+#   CREWAI_TEMP_DIR - temporary processing directory
+
+-o $CREWAI_DOWNLOADS_DIR/YouTube/%(uploader)s/%(upload_date>%Y)s/%(title)s [%(id)s].%(ext)s
 
 # Quality optimization for Discord sharing
 -f bestvideo[height<=1080][ext=mp4]+bestaudio[ext=m4a]/best[ext=mp4]/best
@@ -11,7 +15,7 @@
 --trim-filenames 100
 --windows-filenames
 
-# Comprehensive metadata extraction
+# Metadata extraction
 --write-info-json
 --write-thumbnail
 --embed-metadata
@@ -25,7 +29,7 @@
 --retries 10
 
 # Archive management
---download-archive F:/yt-auto/crewaiv2/yt-dlp/archives/crewai_downloads.txt
+--download-archive $CREWAI_YTDLP_ARCHIVE
 
 # Temp processing directory
--P temp:F:/yt-auto/crewaiv2/CrewAI_Content_System/Downloads/temp
+-P temp:$CREWAI_TEMP_DIR
