refactor: generalize platform metadata

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,18 @@
 # Copy to .env and fill with your secrets
 OPENAI_API_KEY=your-openai-key
 DISCORD_WEBHOOK=https://discord.com/api/webhooks/your-webhook
-GOOGLE_CREDENTIALS=./CrewAI_Content_System/Config/google-credentials.json
-CREWAI_BASE_DIR=./CrewAI_Content_System
+DISCORD_PRIVATE_WEBHOOK=https://discord.com/api/webhooks/your-private-webhook
+GOOGLE_CREDENTIALS=./google-credentials.json
+# Base directory for downloads, logs and temp files (defaults to ~/crew_data)
+CREWAI_BASE_DIR=./crew_data
+# Optional Qdrant connection for vector memory
+QDRANT_URL=http://localhost:6333
+# QDRANT_API_KEY=
 # Optional overrides for path configuration
 # CREWAI_DOWNLOADS_DIR=
 # CREWAI_CONFIG_DIR=
 # CREWAI_LOGS_DIR=
 # CREWAI_PROCESSING_DIR=
-# CREWAI_YTDLP_CONFIG=
-# CREWAI_YTDLP_ARCHIVE=
+# CREWAI_YTDLP_CONFIG=./yt-dlp/config/crewai-system.conf
+# CREWAI_YTDLP_ARCHIVE=./yt-dlp/archives/crewai_downloads.txt
 # CREWAI_TEMP_DIR=
