--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,20 @@
 [project]
-name = "ultimate_discord_intelligence_bot___complete_social_media_analysis_fact_checking_system"
+name = "ultimate_discord_intelligence_bot"
 version = "0.1.0"
-description = "ultimate_discord_intelligence_bot___complete_social_media_analysis_fact_checking_system using crewAI"
+description = "ultimate_discord_intelligence_bot using crewAI"
 authors = [{ name = "Your Name", email = "you@example.com" }]
 requires-python = ">=3.10,<3.14"
 dependencies = [
-    "crewai[tools]>=0.150.0,<1.0.0"
+    "crewai[tools]>=0.150.0,<1.0.0",
+    "qdrant-client>=1.7.3,<2.0.0",
 ]
 
 [project.scripts]
-ultimate_discord_intelligence_bot___complete_social_media_analysis_fact_checking_system = "ultimate_discord_intelligence_bot___complete_social_media_analysis_fact_checking_system.main:run"
-run_crew = "ultimate_discord_intelligence_bot___complete_social_media_analysis_fact_checking_system.main:run"
-train = "ultimate_discord_intelligence_bot___complete_social_media_analysis_fact_checking_system.main:train"
-replay = "ultimate_discord_intelligence_bot___complete_social_media_analysis_fact_checking_system.main:replay"
-test = "ultimate_discord_intelligence_bot___complete_social_media_analysis_fact_checking_system.main:test"
+ultimate_discord_intelligence_bot = "ultimate_discord_intelligence_bot.main:run"
+run_crew = "ultimate_discord_intelligence_bot.main:run"
+train = "ultimate_discord_intelligence_bot.main:train"
+replay = "ultimate_discord_intelligence_bot.main:replay"
+test = "ultimate_discord_intelligence_bot.main:test"
 
 [build-system]
 requires = ["hatchling"]
