fix: handle search backend errors

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,8 @@ QDRANT_URL=http://localhost:6333
 # CREWAI_YTDLP_CONFIG=./yt-dlp/config/crewai-system.conf
 # CREWAI_YTDLP_ARCHIVE=./yt-dlp/archives/crewai_downloads.txt
 # CREWAI_TEMP_DIR=
+# Optional API keys for enhanced fact-checking
+# SERPLY_API_KEY=
+# EXA_API_KEY=
+# PERPLEXITY_API_KEY=
+# WOLFRAM_ALPHA_APPID=
