--- a/src/ultimate_discord_intelligence_bot/config/tasks.yaml
+++ b/src/ultimate_discord_intelligence_bot/config/tasks.yaml
@@ -9,14 +9,16 @@ process_video:
 execute_multi_platform_downloads:
   description: >-
     Retrieve media from a list of URLs spanning YouTube, Twitch, Kick,
-    Twitter and Instagram. Return metadata for each successful download.
+    Twitter, Instagram, TikTok, Reddit and Discord. Return metadata for each
+    successful download.
   expected_output: Local file paths and metadata for downloaded media.
   agent: content_downloader
 
 identify_new_content:
   description: >-
     Given candidate items from platform feeds (YouTube, Twitch, Kick, Twitter,
-    Instagram, Discord), return only those that have not been previously seen.
+    Instagram, TikTok, Reddit, Discord), return only those that have not been
+    previously seen.
   expected_output: List of new content items annotated with platform and URL.
   agent: multi_platform_monitor
 
