--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,17 @@ dependencies = [
     "discord.py>=2.3.2,<3.0.0",
     "opentelemetry-sdk>=1.25.0",
     "opentelemetry-exporter-otlp>=1.25.0",
+    "python-dotenv>=1.0.0,<2.0.0",
 ]
 
 [project.optional-dependencies]
 metrics = ["prometheus-client>=0.20.0"]
+dev = [
+    "pytest>=8.0.0",
+    "pytest-asyncio>=0.23.0",
+    "types-PyYAML",
+    "types-requests",
+]
 
 [project.scripts]
 ultimate_discord_intelligence_bot = "ultimate_discord_intelligence_bot.main:run"
@@ -25,6 +32,7 @@ run_crew = "ultimate_discord_intelligence_bot.main:run"
 train = "ultimate_discord_intelligence_bot.main:train"
 replay = "ultimate_discord_intelligence_bot.main:replay"
 test = "ultimate_discord_intelligence_bot.main:test"
+ingest = "ingest.__main__:main"
 
 [build-system]
 requires = ["hatchling"]
@@ -34,4 +42,22 @@ build-backend = "hatchling.build"
 type = "crew"
 
 [tool.hatch.build.targets.wheel]
-packages = ["ultimate_discord_intelligence_bot", "core", "archive", "obs"]
+packages = [
+    # src layout: list explicit package directories so hatch exposes them
+    "src/ultimate_discord_intelligence_bot",
+    "src/ingest",
+    "src/analysis",
+    "src/memory",
+    "src/grounding",
+    "src/policy",
+    "src/scheduler",
+    "src/security",
+    "src/debate",
+    "src/core",
+    "src/archive",
+    "src/obs",
+    "src/discord",
+    "src/eval",
+    "src/kg",
+    "src/prompt_engine",
+]
