feat(deprecations): Introduce deprecation tracking and migration plan
- Added new deprecation entries for `services.learning_engine.LearningEngine` and `ENABLE_ANALYSIS_HTTP_RETRY` in `config/deprecations.yaml`.
- Updated documentation to reflect deprecated flags and their replacements in `docs/configuration.md`, `docs/feature_flags.md`, and `docs/runtime_data.md`.
- Implemented a deprecation scanner in `scripts/check_deprecations.py` to identify usage of deprecated symbols.
- Created a pre-commit hook to prevent commits with deprecated references.
- Added CI workflow for deprecation checks and quality gate in `.github/workflows/deprecations.yml`.
- Enhanced logging for deprecated flag usage in `src/core/http_utils.py` and `src/ultimate_discord_intelligence_bot/services/learning_engine.py`.
- Removed legacy `trustworthiness.json` and `longlines.txt` files.
- Updated tests to ensure compliance with deprecation policies and added new tests for deprecation tracking.

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,19 @@ tmp/
 temp/
 *.tmp
 *.bak
+
+# Ephemeral lint / analysis reports (removed from repo)
+ruff_full*.txt
+longlines.txt
+archive_manifest.db
+trustworthiness.json
+
+# Generated deprecation & governance artifacts
+reports/deprecations_report.json
+tests/deprecations_snapshot.json
+
+# Local virtual environment (already listed but keep explicit)
+.venv/
+
+# Tool-generated caches
+.pytest_cache/
