--- a/pyproject.toml
+++ b/pyproject.toml
@@ -146,24 +146,21 @@ pretty = true
 color_output = true
 plugins = []
 explicit_package_bases = true
+# Exclude patterns (merged duplicate arrays):
 exclude = [
+    # Test and script directories (temporarily excluded for noise reduction)
+    "tests/",
+    "scripts/",
+    # Fixtures & server app (duplicate discovery / dynamic runtime)
     "tests/fixtures/",
     "src/server/app.py",
+    # Virtual environment
     ".venv/",
     # Prevent duplicate module discovery for bounded_cache (module and src.module)
     "src/core/cache/bounded_cache.py",
 ]
 # Temporary scoping to speed up incremental cleanup: restrict to primary src tree.
 files = ["src"]
-# Exclude tests and scripts during initial noise reduction; re-enable later.
-exclude = [
-    "tests/",
-    "scripts/",
-    "tests/fixtures/",
-    "src/server/app.py",
-    ".venv/",
-    "src/core/cache/bounded_cache.py",
-]
 # Global suppression of missing imports while we stabilize optional dependency guards.
 ignore_missing_imports = true  # TODO: narrow via targeted overrides phase 2
 [[tool.mypy.overrides]]
