--- a/pytest.ini
+++ b/pytest.ini
@@ -2,6 +2,7 @@
 markers =
     asyncio: marks tests that require an async event loop
     integration: marks integration tests that may be slower or require external services
+    slow: marks tests that are particularly slow (e.g., real-world performance benchmarks)
 addopts = 
     -p no:chromadb 
     -p no:chromadb.test 
