⚠️ Deprecate parallelization flags + fix benchmark baseline logic
- Added explicit deprecation section for ENABLE_PARALLEL_MEMORY_OPS / ANALYSIS / FACT_CHECKING in docs/feature_flags.md
- Updated production_config_template.json to explicitly disable harmful parallel flags and expose semantic cache + prompt compression toggles
- Improved benchmark baseline calculation (no longer hardcodes 629s fallback when real baseline exists)

Reference: Week 3 Phase 1 final report (universal overhead pattern).

--- a/production_config_template.json
+++ b/production_config_template.json
@@ -304,7 +304,12 @@
         "ENABLE_RATE_LIMITING": true,
         "ENABLE_DETAILED_LOGGING": true,
         "ENABLE_EXPERIMENTAL_FEATURES": false,
-        "ENABLE_DEBUG_MODE": false
+        "ENABLE_DEBUG_MODE": false,
+        "ENABLE_PARALLEL_MEMORY_OPS": false,      
+        "ENABLE_PARALLEL_ANALYSIS": false,
+        "ENABLE_PARALLEL_FACT_CHECKING": false,
+        "ENABLE_SEMANTIC_CACHE": false,
+        "ENABLE_PROMPT_COMPRESSION": false
     },
     "backup_and_recovery": {
         "backup_schedule": "0 2 * * *",
